--- a/web_client.html
+++ b/web_client.html
@@ -24,7 +24,7 @@
 
 <body>
     <div id="chat"></div>
-    <input type="text" id="message" placeholder="Type your message here...">
+    <input type="text" id="message" placeholder="Type your message here..." autofocus>
     <button id="send">Send</button>
 
     <script>
