--- a/web_client.html
+++ b/web_client.html
@@ -14,6 +14,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
+            overflow: hidden; /* Prevent body from scrolling */
         }
 
         #chat {
@@ -23,17 +24,18 @@
             padding: 15px;
             margin: 10px;
             flex-grow: 1;
-            overflow-y: scroll;
+            overflow-y: auto; /* Enable scrolling */
             font-size: 14px;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
+            justify-content: flex-start; /* Align messages to the top */
         }
 
         #chat p {
             margin: 0;
             padding: 5px 0;
             font-size: 16px;
+            word-wrap: break-word; /* Prevent long words from overflowing */
         }
 
         #input-container {
@@ -41,8 +43,8 @@
             align-items: center;
             background-color: #40444b;
             border-radius: 8px;
-            margin: 10px;
             padding: 10px;
+            margin: 10px;
         }
 
         #message {
@@ -148,7 +150,7 @@
             }
 
             chat.innerHTML += '<p>' + formattedMessage + '</p>';
-            chat.scrollTop = chat.scrollHeight;
+            chat.scrollTop = chat.scrollHeight; // Auto-scroll to the bottom of the chat
         };
 
         socket.onclose = function () {
