--- a/web_client.html
+++ b/web_client.html
@@ -130,7 +130,7 @@
         const messageInput = document.getElementById('message');
         const sendButton = document.getElementById('send');
 
-        const socket = new WebSocket('ws://orangepizero2w:6789');
+        const socket = new WebSocket('ws://127.0.0.1:6789');
         const welcomeBanner = `
  _______  _______  ______    _______    _______  __   __  _______  _______ 
 |   _   ||       ||    _ |  |       |  |       ||  | |  ||   _   ||       |
